@startuml
skinparam classAttributeIconSize 0

class Parkhäuser {
  +ID: Integer
  +ParkhausName: String
}

class Ticket {
  +Nummer: String
  +Preisklasse: Integer
}

class Dauerticket{
  +Ablaufdatum: DateTime
  +Kundennummer: Integer
}

class Einzelticket {
  +Ausstellungsdatum: DateTime
  +Ausfahrdatum: DateTime
}

class verwendeteTickets {
  +Ticketnummer: Ticket.Nummer
  +Ticketart: Ticketarten.ID //nur nötig, wenn wir kein isInstance() benutzen können zur Unterscheidung von Einzel- und Dauertickets
  +Kennnzeichen: Auto.Autonummer
  +Parkhaus: Parkhaus.ID
  +ParkhausEbene: Integer
}

class Ticketarten {
  //an Kommentar von verwendeteTickets.Ticketart gebunden
  +ID: Integer
  +Ticketart: String
}

class Auto {
  +Autonummer: Integer
  +Kennzeichen: String
  +Farbe: String
  +Typ: String
}

class Parkhauspersonal {
  +Personalnummer: Integer
  +Accesslevel: Integer
  +LoggedIn: Boolean
  +Name: String
  +Password: String
}

Dauerticket --> Ticket: extends
Einzelticket --> Ticket: extends
@enduml
